<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtNome" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtEmail" />

        <TextView
            android:id="@+id/txtSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSexo" />

        <TextView
            android:id="@+id/txtCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtCpf" />

        <TextView
            android:id="@+id/txtEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtEndereco" />
    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnExcluir"
        android:src="@android:drawable/ic_delete"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent" />

    </RelativeLayout>